--- a/slider-component/src/components/Slider/style.css
+++ b/slider-component/src/components/Slider/style.css
@@ -64,7 +64,7 @@
 .b-carousel__arrow-left:hover,
 .b-carousel__arrow-right:hover
 {
-    background-image: linear-gradient(to right, transparent 0, rgba(0,0,0,.5) 35%);
+    background-image: linear-gradient(to left, transparent 0, rgba(0,0,0,.35) 5%);
 }
 
 .b-carousel__arrow-left::after,
@@ -90,8 +90,7 @@
     border-bottom: 20px solid transparent;
 }
 
-.b-carousel__arrow-right::after
+.b-carousel__arrow-right
 {
-    border-right: none;
-    border-left: 20px solid #fff;
+    transform: rotate(180deg);
 }
